test/fail/enums_and_variants/wrong_arg_count_variant.lily
#[
SyntaxError: Wrong number of arguments to Some (2 for 1).
    from wrong_arg_count_variant.lily:6:
]#

var v = Some(1, 2)
